--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.9"
    
 services:
   web:
-    image: rohitkatlaa/chat_bot:latest
+    image: venkata7777/chat_bot:latest
     command: python manage.py runserver 0.0.0.0:8000
     ports:
       - "8000:8000"
